gl51-master/src/test/deca/context/valid/test-operationArithm.deca
//Description

{
    int a = 5 + 6;
}