gl51-master/src/test/deca/context/invalid/testObject_unknownMethod.deca
//Description
//méthode ou attributs inexistants

class A {}
{
    int j = 0;
    A a = new A();
    a.j();
}